k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-backend
  template:
    metadata:
      labels:
        app: chatbot-backend
    spec:
      containers:
      - name: chatbot-backend
        image: omarrrh/chatbot-backend:v3.2.1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-backend
  namespace: default
spec:
  selector:
    app: chatbot-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
