k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-frontend
  template:
    metadata:
      labels:
        app: chatbot-frontend
    spec:
      containers:
      - name: chatbot-frontend
        image: omarrrh/chatbot-frontend:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-frontend-service
spec:
  type: NodePort
  selector:
    app: chatbot-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
